nodejs/versioned_docs/version-1.20/api/class-testresult.mdx
---
id: class-testresult
title: "TestResult"
---
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

A result of a single [TestCase] run.


- [testResult.attachments](./api/class-testresult.mdx#test-result-attachments)
- [testResult.duration](./api/class-testresult.mdx#test-result-duration)
- [testResult.error](./api/class-testresult.mdx#test-result-error)
- [testResult.errors](./api/class-testresult.mdx#test-result-errors)
- [testResult.retry](./api/class-testresult.mdx#test-result-retry)
- [testResult.startTime](./api/class-testresult.mdx#test-result-start-time)
- [testResult.status](./api/class-testresult.mdx#test-result-status)
- [testResult.stderr](./api/class-testresult.mdx#test-result-stderr)
- [testResult.stdout](./api/class-testresult.mdx#test-result-stdout)
- [testResult.steps](./api/class-testresult.mdx#test-result-steps)
- [testResult.workerIndex](./api/class-testresult.mdx#test-result-worker-index)

## testResult.attachments {#test-result-attachments}
- type: &#60;[Array]<[Object]>&#62;
  - `name` &#60;[string]&#62; Attachment name.
  - `contentType` &#60;[string]&#62; Content type of this attachment to properly present in the report, for example `'application/json'` or `'image/png'`.
  - `path` &#60;[void]|[string]&#62; Optional path on the filesystem to the attached file.
  - `body` &#60;[void]|[Buffer]&#62; Optional attachment body used instead of a file.

The list of files or buffers attached during the test execution through [testInfo.attachments](./api/class-testinfo.mdx#test-info-attachments).

## testResult.duration {#test-result-duration}
- type: &#60;[number]&#62;

Running time in milliseconds.

## testResult.error {#test-result-error}
- type: &#60;[void]|[TestError]&#62;

First error thrown during test execution, if any. This is equal to the first element in [testResult.errors](./api/class-testresult.mdx#test-result-errors).

## testResult.errors {#test-result-errors}
- type: &#60;[Array]<[TestError]>&#62;

Errors thrown during the test execution.

## testResult.retry {#test-result-retry}
- type: &#60;[number]&#62;

When test is retries multiple times, each retry attempt is given a sequential number.

Learn more about [test retries](./test-retries.mdx#retries).

## testResult.startTime {#test-result-start-time}
- type: &#60;[Date]&#62;

Start time of this particular test run.

## testResult.status {#test-result-status}
- type: &#60;"passed"|"failed"|"timedOut"|"skipped"&#62;

The status of this test result. See also [testCase.expectedStatus](./api/class-testcase.mdx#test-case-expected-status).

## testResult.stderr {#test-result-stderr}
- type: &#60;[Array]<[string]|[Buffer]>&#62;

Anything written to the standard error during the test run.

## testResult.stdout {#test-result-stdout}
- type: &#60;[Array]<[string]|[Buffer]>&#62;

Anything written to the standard output during the test run.

## testResult.steps {#test-result-steps}
- type: &#60;[Array]<[TestStep]>&#62;

List of steps inside this test run.

## testResult.workerIndex {#test-result-worker-index}
- type: &#60;[number]&#62;

Index of the worker where the test was run.

Learn more about [parallelism and sharding](./test-parallel.mdx) with Playwright Test.

[Accessibility]: ./api/class-accessibility.mdx "Accessibility"
[Android]: ./api/class-android.mdx "Android"
[AndroidDevice]: ./api/class-androiddevice.mdx "AndroidDevice"
[AndroidInput]: ./api/class-androidinput.mdx "AndroidInput"
[AndroidSocket]: ./api/class-androidsocket.mdx "AndroidSocket"
[AndroidWebView]: ./api/class-androidwebview.mdx "AndroidWebView"
[APIRequest]: ./api/class-apirequest.mdx "APIRequest"
[APIRequestContext]: ./api/class-apirequestcontext.mdx "APIRequestContext"
[APIResponse]: ./api/class-apiresponse.mdx "APIResponse"
[APIResponseAssertions]: ./test-assertions.mdx "APIResponseAssertions"
[Browser]: ./api/class-browser.mdx "Browser"
[BrowserContext]: ./api/class-browsercontext.mdx "BrowserContext"
[BrowserServer]: ./api/class-browserserver.mdx "BrowserServer"
[BrowserType]: ./api/class-browsertype.mdx "BrowserType"
[CDPSession]: ./api/class-cdpsession.mdx "CDPSession"
[ConsoleMessage]: ./api/class-consolemessage.mdx "ConsoleMessage"
[Coverage]: ./api/class-coverage.mdx "Coverage"
[Dialog]: ./api/class-dialog.mdx "Dialog"
[Download]: ./api/class-download.mdx "Download"
[Electron]: ./api/class-electron.mdx "Electron"
[ElectronApplication]: ./api/class-electronapplication.mdx "ElectronApplication"
[ElementHandle]: ./api/class-elementhandle.mdx "ElementHandle"
[FileChooser]: ./api/class-filechooser.mdx "FileChooser"
[Frame]: ./api/class-frame.mdx "Frame"
[FrameLocator]: ./api/class-framelocator.mdx "FrameLocator"
[JSHandle]: ./api/class-jshandle.mdx "JSHandle"
[Keyboard]: ./api/class-keyboard.mdx "Keyboard"
[Locator]: ./api/class-locator.mdx "Locator"
[LocatorAssertions]: ./test-assertions.mdx "LocatorAssertions"
[Logger]: ./api/class-logger.mdx "Logger"
[Mouse]: ./api/class-mouse.mdx "Mouse"
[Page]: ./api/class-page.mdx "Page"
[PageAssertions]: ./test-assertions.mdx "PageAssertions"
[Playwright]: ./api/class-playwright.mdx "Playwright"
[PlaywrightAssertions]: ./test-assertions.mdx "PlaywrightAssertions"
[Request]: ./api/class-request.mdx "Request"
[Response]: ./api/class-response.mdx "Response"
[Route]: ./api/class-route.mdx "Route"
[ScreenshotAssertions]: ./test-assertions.mdx "ScreenshotAssertions"
[Selectors]: ./api/class-selectors.mdx "Selectors"
[TimeoutError]: ./api/class-timeouterror.mdx "TimeoutError"
[Touchscreen]: ./api/class-touchscreen.mdx "Touchscreen"
[Tracing]: ./api/class-tracing.mdx "Tracing"
[Video]: ./api/class-video.mdx "Video"
[WebSocket]: ./api/class-websocket.mdx "WebSocket"
[Worker]: ./api/class-worker.mdx "Worker"
[Fixtures]: ./api/class-fixtures.mdx "Fixtures"
[Test]: ./api/class-test.mdx "Test"
[TestConfig]: ./api/class-testconfig.mdx "TestConfig"
[TestError]: ./api/class-testerror.mdx "TestError"
[TestInfo]: ./api/class-testinfo.mdx "TestInfo"
[TestOptions]: ./api/class-testoptions.mdx "TestOptions"
[TestProject]: ./api/class-testproject.mdx "TestProject"
[WorkerInfo]: ./api/class-workerinfo.mdx "WorkerInfo"
[Location]: ./api/class-location.mdx "Location"
[Reporter]: ./api/class-reporter.mdx "Reporter"
[Suite]: ./api/class-suite.mdx "Suite"
[TestCase]: ./api/class-testcase.mdx "TestCase"
[TestResult]: ./api/class-testresult.mdx "TestResult"
[TestStep]: ./api/class-teststep.mdx "TestStep"
[Element]: https://developer.mozilla.org/en-US/docs/Web/API/element "Element"
[EvaluationArgument]: ./evaluating.mdx#evaluation-argument "EvaluationArgument"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[iterator]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Iteration_protocols "Iterator"
[origin]: https://developer.mozilla.org/en-US/docs/Glossary/Origin "Origin"
[selector]: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors "selector"
[Serializable]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify#Description "Serializable"
[UIEvent.detail]: https://developer.mozilla.org/en-US/docs/Web/API/UIEvent/detail "UIEvent.detail"
[UnixTime]: https://en.wikipedia.org/wiki/Unix_time "Unix Time"
[xpath]: https://developer.mozilla.org/en-US/docs/Web/XPath "xpath"

[Array]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array "Array"
[boolean]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#Boolean_type "Boolean"
[Buffer]: https://nodejs.org/api/buffer.html#buffer_class_buffer "Buffer"
[ChildProcess]: https://nodejs.org/api/child_process.html "ChildProcess"
[Error]: https://nodejs.org/api/errors.html#errors_class_error "Error"
[EventEmitter]: https://nodejs.org/api/events.html#events_class_eventemitter "EventEmitter"
[function]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Function "Function"
[Map]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Map "Map"
[null]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/null "null"
[number]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#Number_type "Number"
[Object]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object "Object"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[Readable]: https://nodejs.org/api/stream.html#stream_class_stream_readable "Readable"
[RegExp]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/RegExp "RegExp"
[string]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#String_type "string"
[void]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/undefined "void"
[URL]: https://nodejs.org/api/url.html "URL"

[all available image tags]: https://mcr.microsoft.com/v2/playwright/tags/list "all available image tags"
[Docker Hub]: https://hub.docker.com/_/microsoft-playwright "Docker Hub"
[Dockerfile.focal]: https://github.com/microsoft/playwright/blob/master/utils/docker/Dockerfile.focal "Dockerfile.focal"
